--- a/love/style.css
+++ b/love/style.css
@@ -438,6 +438,7 @@ body {
     outline: none;
     overflow: visible;
     perspective: 900px;
+    touch-action: manipulation;
 }
 
 .envelope-heart {
